--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ $(document).ready(function() {
 			<h1>姓名</h1>
             <br><br>
 			<!--其余内容-->
-            <p>Assistant Professor</p>	
-            <p><A href="https://www.cs.cityu.edu.hk/",target="_blank">Department of Computer Science</A></p>
-			<p><A href="https://www.cityu.edu.hk/cityu/index-sc.htm",target="_blank">City University of Hong Kong</A></p>
+            <p>Associate Professor</p>	
+            <p><A href="https://www.cs.cityu.edu.hk/",target="_blank">Department of Artificial Intelligence</A></p>
+			<p><A href="https://www.cityu.edu.hk/cityu/index-sc.htm",target="_blank">Xiamen University</A></p>
             <!--邮箱-->
-			<p><img src="img/icn_mail.png" alt="" /> jingliao AT cityu.edu.hk</p>				
+			<p><img src="img/icn_mail.png" alt="" /> zhangjs AT xmu.edu.cn</p>				
 			<!--地址-->
-			<p><img src="img/icn_address.png" alt="" /> Y6429, 6/F, Yeung Kin Man Academic Building , CityU, Hong Kong<br />	
+			<p><img src="img/icn_address.png" alt="" /> Y6429, 6/F, School of Informatics , Xiamen University, Xiamen, Fujian Province<br />	
 			
 			</div> <!-- end .about_copy -->
 		</div> <!-- end .grid_6 -->
@@ -105,7 +105,7 @@ $(document).ready(function() {
 			<div class="about_copy2">	
             <h2>short bio  </h2>	
             <br>	
-			<p>I am an Assistant Professor with the <A href="https://www.cs.cityu.edu.hk/ ">Department of Computer Science</A>, <A href=" https://www.cityu.edu.hk/cityu/index-sc.htm/"> City University of Hong Kong (CityU)</A> since Sep. 2018. Prior to that, I was a Researcher at <A href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</A>, Microsoft Research Asia (MSRA) from 2015 to 2018. I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <A href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</A> and Prof. <A href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</A>.</p>
+			<p>I am an Associate Professor with the <A href="https://www.ai.xmu.edu.cn/ ">Department of Artificial Intelligence</A>, <A href=" https://www.cityu.edu.hk/cityu/index-sc.htm/"> City University of Hong Kong (CityU)</A> since Sep. 2010. Prior to that, I was a Researcher at <A href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</A>, Microsoft Research Asia (MSRA) from 2015 to 2018. I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <A href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</A> and Prof. <A href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</A>.</p>
            </div> <!-- end .about_copy -->
 	</div> <!-- end .grid_6 -->
 	
@@ -114,8 +114,8 @@ $(document).ready(function() {
 			<h2>Research Interests</h2>
 			<ul>
 				<li><div class="skill2"><p><strong>Computer Graphics</strong></p></div></li>
-				<li><div class="skill3"><p><strong>Computer Vision</strong></p></div></li>
-				<li><div class="skill4"><p><strong>Deep Learning</strong></p></div></li>
+				<li><div class="skill3"><p><strong>Brain and Cognition Computing</strong></p></div></li>
+				<li><div class="skill4"><p><strong>Art Cognition and Computing</strong></p></div></li>
 
 			</ul>
 		</div> <!-- end .skills -->
