updata research area

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ $(document).ready(function() {
 			<div class="about_copy2">	
             <h2>个人简介</h2>	
             <br>
-			<p>博士，副教授，2008年3月毕业于浙江大学计算机辅助设计与图形学国家重点实验室，获计算机科学与技术工学博士学位。2008年3月至2010年5月，为厦门大学数学科学学院“人工智能基础”博士后研究人员，2010年5月起在厦门大学人工智能系工作，其中2014年底至2016年初在美国南加州大学(USC)、加州理工学院(Caltech)等校访问学习。主要研究领域为数字媒体与人机交互、脑与认知科学、人工智能、艺术认知与计算，在国内外期刊和会议，如《Nature Communications》,《IEEE Transactions on Visualization and Computer Graphics》(TVCG)，《ACM Transactions on Applied Perception》(TAP), 《Computer Graphics Forum 》,《Pattern Recognition》,《Brain》,《Human Brain Mapping》《Brain Research》，《Neuroscience》,《中国科学：信息科学》等上面发表论文40余篇，获授权国家发明专利7项。先后主持国家自然科学基金（2项）、航空科学基金，参与863、973、国家自然基金等项目十余项。2014年指导本科生获中国大学生智能设计竞赛一等奖、优秀指导教师奖，2016年指导研究生获中国计算机辅助设计与图形学大会最佳论文奖。</p>
+			<p>博士，副教授，2008年3月毕业于浙江大学计算机辅助设计与图形学国家重点实验室，获计算机科学与技术工学博士学位。2008年3月至2010年5月，为厦门大学数学科学学院“人工智能基础”博士后研究人员，2010年5月起在厦门大学人工智能系工作，其中2014年底至2016年初在美国南加州大学(USC)、加州理工学院(Caltech)等校访问学习。在国内外期刊和会议，如《Nature Communications》,《IEEE Transactions on Visualization and Computer Graphics》(TVCG)，《ACM Transactions on Applied Perception》(TAP), 《Computer Graphics Forum 》,《Pattern Recognition》,《Brain》,《Human Brain Mapping》《Brain Research》，《Neuroscience》,《中国科学：信息科学》等上面发表论文40余篇，获授权国家发明专利7项。先后主持国家自然科学基金（2项）、航空科学基金，参与863、973、国家自然基金等项目十余项。2014年指导本科生获中国大学生智能设计竞赛一等奖、优秀指导教师奖，2016年指导研究生获中国计算机辅助设计与图形学大会最佳论文奖。</p>
 			</div> <!-- end .about_copy -->
 	</div> <!-- end .grid_6 -->
 	
@@ -115,8 +115,9 @@ $(document).ready(function() {
 			<h2>研究方向</h2>
 			<br>
 			<ul>
-				<li><div class="skill2"><p><strong>计算机图形学</strong></p></div></li>
-				<li><div class="skill3"><p><strong>脑与认知科学</strong></p></div></li>
+				<li><div class="skill1"><p><strong>数字媒体与人机交互</strong></p></div></li>
+				<li><div class="skill2"><p><strong>脑与认知科学</strong></p></div></li>
+				<li><div class="skill3"><p><strong>人工智能</strong></p></div></li>
 				<li><div class="skill4"><p><strong>艺术认知与计算</strong></p></div></li>
 			</ul>
 		</div> <!-- end .skills -->
@@ -181,27 +182,27 @@ $(document).ready(function() {
 	<h2>国际期刊</h2>
 	<br></br>
 	   <div class="container_16">       
-			<p>[1] Sanjay M Sisodiya , Christopher D Whelan, Sean N Hatton , Khoa Huynh , Andre Altmann, Mina Ryten , Annamaria Vezzani , Maria Eugenia Caligiuri , Angelo Labate, Antonio Gambardella , Victoria Ives-Deliperi , Stefano Meletti , Brent C Munsell , Leonardo Bonilha, Manuela Tondelli, Michael Rebsamen, Christian Rummel , Anna Elisabetta Vaudano , Roland Wiest , Akshara R Balachandra , Núria Bargalló, Emanuele Bartolini , Andrea Bernasconi , Neda Bernasconi , Boris Bernhardt , Benoit Caldairou , Sarah J A Carr, Gianpiero L Cavalleri , Fernando Cendes, Luis Concha , Patricia M Desmond, Martin Domin , John S Duncan, Niels K Focke, Renzo Guerrini, Khalid Hamandi , Graeme D Jackson, Neda Jahanshad , Reetta Kälviäinen, Simon S Keller, Peter Kochunov, Magdalena A Kowalczyk, Barbara A K Kreilkamp , Patrick Kwan Sara Lariviere, Matteo Lenge, Seymour M Lopez, Pascal Martin , Mario Mascalchi , José C V Moreira, Marcia E Morita-Sherman , Heath R Pardoe , Jose C Pariente, Kotikalapudi Raviteja , Cristiane S Rocha, Raúl Rodríguez-Cruces , Margitta Seeck, Mira K H G Semmelroch , Benjamin Sinclair , Hamid Soltanian-Zadeh, Dan J Stein, Pasquale Striano , Peter N Taylor , Rhys H Thomas , Sophia I Thomopoulos , Dennis Velakoulis, Lucy Vivash, Bernd Weber , Clarissa Lin Yasuda , <b>Junsong Zhang</b>, Paul M Thompson , Carrie R McDonald*, <b>The ENIGMA-Epilepsy working group: mapping disease from large datasets</b>，<i>Human Brain Mapping</i>, 2020, DOI:10.1002/hbm.25037. (脑与认知计算领域，SCI, IF: 4.42)</p>
+			<p>[1] Sanjay M Sisodiya , Christopher D Whelan, Sean N Hatton , Khoa Huynh , Andre Altmann, Mina Ryten , Annamaria Vezzani , Maria Eugenia Caligiuri , Angelo Labate, Antonio Gambardella , Victoria Ives-Deliperi , Stefano Meletti , Brent C Munsell , Leonardo Bonilha, Manuela Tondelli, Michael Rebsamen, Christian Rummel , Anna Elisabetta Vaudano , Roland Wiest , Akshara R Balachandra , Núria Bargalló, Emanuele Bartolini , Andrea Bernasconi , Neda Bernasconi , Boris Bernhardt , Benoit Caldairou , Sarah J A Carr, Gianpiero L Cavalleri , Fernando Cendes, Luis Concha , Patricia M Desmond, Martin Domin , John S Duncan, Niels K Focke, Renzo Guerrini, Khalid Hamandi , Graeme D Jackson, Neda Jahanshad , Reetta Kälviäinen, Simon S Keller, Peter Kochunov, Magdalena A Kowalczyk, Barbara A K Kreilkamp , Patrick Kwan Sara Lariviere, Matteo Lenge, Seymour M Lopez, Pascal Martin , Mario Mascalchi , José C V Moreira, Marcia E Morita-Sherman , Heath R Pardoe , Jose C Pariente, Kotikalapudi Raviteja , Cristiane S Rocha, Raúl Rodríguez-Cruces , Margitta Seeck, Mira K H G Semmelroch , Benjamin Sinclair , Hamid Soltanian-Zadeh, Dan J Stein, Pasquale Striano , Peter N Taylor , Rhys H Thomas , Sophia I Thomopoulos , Dennis Velakoulis, Lucy Vivash, Bernd Weber , Clarissa Lin Yasuda , <b>Junsong Zhang</b>, Paul M Thompson , Carrie R McDonald*, The ENIGMA-Epilepsy working group: mapping disease from large datasets，<i>Human Brain Mapping</i>, 2020, DOI:10.1002/hbm.25037. (脑与认知计算领域，SCI, IF: 4.42)</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[2] R. Li, M.Y. Zhu, J.N. Li, M.S. Bienkowski, N.N. Foster, T.I. Bowman, H. Hintiryan, C.L. Zhou, <b>J.S. Zhang</b>*, H.W. Dong*，<b>G-Cut: Precise Segmentation of Densely Connected Neuron Clusters</b>, <i>Nature Communications</i>, 2019. (脑与认知计算领域，SCI, IF: 12.353)</p>
+			<p>[2] R. Li, M.Y. Zhu, J.N. Li, M.S. Bienkowski, N.N. Foster, T.I. Bowman, H. Hintiryan, C.L. Zhou, <b>J.S. Zhang</b>*, H.W. Dong*，G-Cut: Precise Segmentation of Densely Connected Neuron Clusters, <i>Nature Communications</i>, 2019. (脑与认知计算领域，SCI, IF: 12.353)</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[3] <b>J.S. Zhang</b>*, J.P. Fan, Z.S. Luo, <b>Generating Multi-destination Maps</b>, <i>IEEE Transactions on Visualization & Computer Graphics</i>, 2017, 23(8):1964-1976.</p>
+			<p>[3] <b>J.S. Zhang</b>*, J.P. Fan, Z.S. Luo, Generating Multi-destination Maps, <i>IEEE Transactions on Visualization & Computer Graphics</i>, 2017, 23(8):1964-1976.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[4] J.J. Zhang*, J.H. Yu, K. Zhang, X.J. Zheng，<b>J.S. Zhang</b>, <b>Computational Aesthetic Evaluation of Logos</b>, <i>ACM Transactions on Applied Perception</i>, 2017, 14(3): 1-21.</p>
+			<p>[4] J.J. Zhang*, J.H. Yu, K. Zhang, X.J. Zheng，<b>J.S. Zhang</b>, Computational Aesthetic Evaluation of Logos, <i>ACM Transactions on Applied Perception</i>, 2017, 14(3): 1-21.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[5] M.Y. Xu, J.F. Yao*, Z.H. Zhang, R. Li, B.R. Yang, C.Y. Li, J. Li, <b>J.S. Zhang</b>*, <b>Learning EEG Topographical Representation for Classification via Convolutional Neural Network</b>, <i>Pattern Recognition</i>, 2020, 105: 1-14.（脑与认知计算领域，SCI, IF:7.19）</p>
+			<p>[5] M.Y. Xu, J.F. Yao*, Z.H. Zhang, R. Li, B.R. Yang, C.Y. Li, J. Li, <b>J.S. Zhang</b>*, Learning EEG Topographical Representation for Classification via Convolutional Neural Network, <i>Pattern Recognition</i>, 2020, 105: 1-14.（脑与认知计算领域，SCI, IF:7.19）</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[6] <b>J.S. Zhang</b>*, Y. Wang, W.Y. Xiao, Z.S. Luo, <b>Synthesizing Ornamental Typefaces</b>, <i>Computer Graphics Forum</i>, 2017,36(1):64-75.</p>
+			<p>[6] <b>J.S. Zhang</b>*, Y. Wang, W.Y. Xiao, Z.S. Luo, Synthesizing Ornamental Typefaces, <i>Computer Graphics Forum</i>, 2017,36(1):64-75.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
@@ -209,7 +210,7 @@ $(document).ready(function() {
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[8] R. Li, R.L. Qin, <b>J.S. Zhang</b>*, J.J.Wu, C.L. Zhou, <b>The Aesthetic Preference of Chinese Typefaces - An Event-Related Potential study</b>, <i>Brain Research</i>, 2015，1598: 57-65.  (脑与认知计算领域，SCI/SSCI, IF:2.56)</p>
+			<p>[8] R. Li, R.L. Qin, <b>J.S. Zhang</b>*, J.J.Wu, C.L. Zhou, The Aesthetic Preference of Chinese Typefaces - An Event-Related Potential study, <i>Brain Research</i>, 2015，1598: 57-65.  (脑与认知计算领域，SCI/SSCI, IF:2.56)</p>
 	    </div>  	
        <br></br>
           	  
@@ -219,40 +220,40 @@ $(document).ready(function() {
 	<h2>国内期刊</h2>
 	<br></br>
         <div class="container_16">       
-		   <p>[1] 张艳，谢源，洪辰，曲延云*，李睿，<b>张俊松</b>，李翠华，<b>基于多视角聚类分析的汉字字体审美偏好挖掘</b>，CIDE&DEA 2020，推荐到中国科学：信息科学，2020.(CIDE&DEA 2020 最佳论文奖)</p>
+		   <p>[1] 张艳，谢源，洪辰，曲延云*，李睿，<b>张俊松</b>，李翠华，基于多视角聚类分析的汉字字体审美偏好挖掘，CIDE&DEA 2020，推荐到中国科学：信息科学，2020.(CIDE&DEA 2020 最佳论文奖)</p>
 	    </div>  	
        <br></br>
 	   <div class="container_16">       
-			<p>[2] 郑瑞凌,<b>张俊松</b>*,<b>脑电时空多特征融合的数字图形界面认知负荷评价方法</b>,计算机辅助设计与图形学学报，2020，32（7）:1062-1069.</p>
+			<p>[2] 郑瑞凌，<b>张俊松</b>*，脑电时空多特征融合的数字图形界面认知负荷评价方法,计算机辅助设计与图形学学报，2020，32（7）:1062-1069.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[3] <b>张俊松</b>*，<b>数字书法研究综述</b>，中国科学:信息科学, 2019，2：143-158.</p>
+			<p>[3] <b>张俊松</b>*，数字书法研究综述，中国科学:信息科学, 2019，2：143-158.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[4] 黄培强，李昕，<b>张俊松</b>*，<b>结合网格保刚性的多目的地地图布局优化方法</b>，计算机辅助设计与图形学学报，2019，31（4）：622-628.</p>
+			<p>[4] 黄培强，李昕，<b>张俊松</b>*，结合网格保刚性的多目的地地图布局优化方法，计算机辅助设计与图形学学报，2019，31（4）：622-628.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[5] 杨祖义，<b>张俊松</b>*，<b>融合主题和视觉特征的图片拼贴画合成方法</b>,计算机辅助设计与图形学学报，2019，31（8）：1403-1409.</p>
+			<p>[5] 杨祖义，<b>张俊松</b>*，融合主题和视觉特征的图片拼贴画合成方法,计算机辅助设计与图形学学报，2019，31（8）：1403-1409.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[6] 戴庆辉,<b>张俊松</b>*,<b>考虑笔画和拓扑结构的字形美化方法</b>,中国科学:信息科学, 2017，47(4), 468-481.(China CAD&CG 2016 最佳论文奖)</p>
+			<p>[6] 戴庆辉,<b>张俊松</b>*,考虑笔画和拓扑结构的字形美化方法,中国科学:信息科学, 2017，47(4), 468-481.(China CAD&CG 2016 最佳论文奖)</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[7] 罗振珊，<b>张俊松</b>*，范接鹏，<b>结合因子图的多目的地地图布局优化</b>，中国图象图形学学报，2015, 20(3): 418-426.</p>
+			<p>[7] 罗振珊，<b>张俊松</b>*，范接鹏，结合因子图的多目的地地图布局优化，中国图象图形学学报，2015, 20(3): 418-426.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[8] 邓晓健，李彬，<b>张俊松</b>*，<b>基于统计的汉字字形视觉重心计算方法</b>，中文信息学报，2015，29（4）：159-165。</p>
+			<p>[8] 邓晓健，李彬，<b>张俊松</b>*，基于统计的汉字字形视觉重心计算方法，中文信息学报，2015，29（4）：159-165。</p>
 	    </div>  	</b>
        <br></br>
         <div class="container_16">       
-			<p>[9] <b>张俊松</b>,张悠苗,周昌乐, <b>书法临摹过程的交互式动画建模方法</b>,计算机辅助设计与图形学学报，2014，26（6），963-972.</p>
-	    </div>  	
+			<p>[9] <b>张俊松</b>，张悠苗，周昌乐，书法临摹过程的交互式动画建模方法,计算机辅助设计与图形学学报，2014，26（6），963-972.</p>
+	    </div>  
        <br></br>
      	  
 	</div><!-- end .gallery -->	
