--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ $(document).ready(function() {
 			<h2>研究方向</h2>
 			<br>
 			<ul>
-				<li><div class="skill1"><p><strong>数字媒体与人机交互</strong></p></div></li>
-				<li><div class="skill2"><p><strong>脑与认知科学</strong></p></div></li>
-				<li><div class="skill3"><p><strong>人工智能</strong></p></div></li>
-				<li><div class="skill4"><p><strong>艺术认知与计算</strong></p></div></li>
+				<li><div class="skill1"><p>数字媒体与人机交互</p></div></li>
+				<li><div class="skill2"><p>脑与认知科学</p></div></li>
+				<li><div class="skill3"><p>人工智能</p></div></li>
+				<li><div class="skill4"><p>艺术认知与计算</p></div></li>
 			</ul>
 		</div> <!-- end .skills -->
 	</div> 
@@ -161,10 +161,10 @@ $(document).ready(function() {
 		</div>	
     <div class="gallery">
         <div class="container_16">
-		  <p>2020年，第十六届全国智能CAD与数字娱乐会议暨第十四届全国数字娱乐与艺术研讨会(CIDE&DEA 2020),<strong>最佳论文奖</strong>，中国图象图形学学会。</p>
-		  <p>2016年，中国计算机辅助设计与图形学大会(China CAD&CG 2016)，<strong>最佳论文奖</strong>，中国计算机学会。</p>
-		  <p>2014年，全国大学生智能设计竞赛，<strong>一等奖，优秀指导教师奖</strong>，中国人工智能学会。</p>
-		  <p>2012年，厦门大学“田昭武学科交叉奖”，<strong>特等奖</strong>（艺术认知与计算）。</p>
+		  <p>2020年，第十六届全国智能CAD与数字娱乐会议暨第十四届全国数字娱乐与艺术研讨会(CIDE&DEA 2020),最佳论文奖，中国图象图形学学会。</p>
+		  <p>2016年，中国计算机辅助设计与图形学大会(China CAD&CG 2016)，最佳论文奖，中国计算机学会。</p>
+		  <p>2014年，全国大学生智能设计竞赛，一等奖，优秀指导教师奖，中国人工智能学会。</p>
+		  <p>2012年，厦门大学“田昭武学科交叉奖”，特等奖（艺术认知与计算）。</p>
 		  </div>  	
        <br></br>
 	</div><!-- end .gallery -->	
@@ -182,27 +182,27 @@ $(document).ready(function() {
 	<h2>国际期刊</h2>
 	<br></br>
 	   <div class="container_16">       
-			<p>[1] Sanjay M Sisodiya , Christopher D Whelan, Sean N Hatton , Khoa Huynh , Andre Altmann, Mina Ryten , Annamaria Vezzani , Maria Eugenia Caligiuri , Angelo Labate, Antonio Gambardella , Victoria Ives-Deliperi , Stefano Meletti , Brent C Munsell , Leonardo Bonilha, Manuela Tondelli, Michael Rebsamen, Christian Rummel , Anna Elisabetta Vaudano , Roland Wiest , Akshara R Balachandra , Núria Bargalló, Emanuele Bartolini , Andrea Bernasconi , Neda Bernasconi , Boris Bernhardt , Benoit Caldairou , Sarah J A Carr, Gianpiero L Cavalleri , Fernando Cendes, Luis Concha , Patricia M Desmond, Martin Domin , John S Duncan, Niels K Focke, Renzo Guerrini, Khalid Hamandi , Graeme D Jackson, Neda Jahanshad , Reetta Kälviäinen, Simon S Keller, Peter Kochunov, Magdalena A Kowalczyk, Barbara A K Kreilkamp , Patrick Kwan Sara Lariviere, Matteo Lenge, Seymour M Lopez, Pascal Martin , Mario Mascalchi , José C V Moreira, Marcia E Morita-Sherman , Heath R Pardoe , Jose C Pariente, Kotikalapudi Raviteja , Cristiane S Rocha, Raúl Rodríguez-Cruces , Margitta Seeck, Mira K H G Semmelroch , Benjamin Sinclair , Hamid Soltanian-Zadeh, Dan J Stein, Pasquale Striano , Peter N Taylor , Rhys H Thomas , Sophia I Thomopoulos , Dennis Velakoulis, Lucy Vivash, Bernd Weber , Clarissa Lin Yasuda , <b>Junsong Zhang</b>, Paul M Thompson , Carrie R McDonald*, The ENIGMA-Epilepsy working group: mapping disease from large datasets，<i>Human Brain Mapping</i>, 2020, DOI:10.1002/hbm.25037. (脑与认知计算领域，SCI, IF: 4.42)</p>
+			<p>[1] Sanjay M Sisodiya , Christopher D Whelan, Sean N Hatton , Khoa Huynh , Andre Altmann, Mina Ryten , Annamaria Vezzani , Maria Eugenia Caligiuri , Angelo Labate, Antonio Gambardella , Victoria Ives-Deliperi , Stefano Meletti , Brent C Munsell , Leonardo Bonilha, Manuela Tondelli, Michael Rebsamen, Christian Rummel , Anna Elisabetta Vaudano , Roland Wiest , Akshara R Balachandra , Núria Bargalló, Emanuele Bartolini , Andrea Bernasconi , Neda Bernasconi , Boris Bernhardt , Benoit Caldairou , Sarah J A Carr, Gianpiero L Cavalleri , Fernando Cendes, Luis Concha , Patricia M Desmond, Martin Domin , John S Duncan, Niels K Focke, Renzo Guerrini, Khalid Hamandi , Graeme D Jackson, Neda Jahanshad , Reetta Kälviäinen, Simon S Keller, Peter Kochunov, Magdalena A Kowalczyk, Barbara A K Kreilkamp , Patrick Kwan Sara Lariviere, Matteo Lenge, Seymour M Lopez, Pascal Martin , Mario Mascalchi , José C V Moreira, Marcia E Morita-Sherman , Heath R Pardoe , Jose C Pariente, Kotikalapudi Raviteja , Cristiane S Rocha, Raúl Rodríguez-Cruces , Margitta Seeck, Mira K H G Semmelroch , Benjamin Sinclair , Hamid Soltanian-Zadeh, Dan J Stein, Pasquale Striano , Peter N Taylor , Rhys H Thomas , Sophia I Thomopoulos , Dennis Velakoulis, Lucy Vivash, Bernd Weber , Clarissa Lin Yasuda , Junsong Zhang, Paul M Thompson , Carrie R McDonald*, The ENIGMA-Epilepsy working group: mapping disease from large datasets，<i>Human Brain Mapping</i>, 2020, DOI:10.1002/hbm.25037. (脑与认知计算领域，SCI, IF: 4.42)</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[2] R. Li, M.Y. Zhu, J.N. Li, M.S. Bienkowski, N.N. Foster, T.I. Bowman, H. Hintiryan, C.L. Zhou, <b>J.S. Zhang</b>*, H.W. Dong*，G-Cut: Precise Segmentation of Densely Connected Neuron Clusters, <i>Nature Communications</i>, 2019. (脑与认知计算领域，SCI, IF: 12.353)</p>
+			<p>[2] R. Li, M.Y. Zhu, J.N. Li, M.S. Bienkowski, N.N. Foster, T.I. Bowman, H. Hintiryan, C.L. Zhou, J.S. Zhang*, H.W. Dong*，G-Cut: Precise Segmentation of Densely Connected Neuron Clusters, <i>Nature Communications</i>, 2019. (脑与认知计算领域，SCI, IF: 12.353)</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[3] <b>J.S. Zhang</b>*, J.P. Fan, Z.S. Luo, Generating Multi-destination Maps, <i>IEEE Transactions on Visualization & Computer Graphics</i>, 2017, 23(8):1964-1976.</p>
+			<p>[3] J.S. Zhang*, J.P. Fan, Z.S. Luo, Generating Multi-destination Maps, <i>IEEE Transactions on Visualization & Computer Graphics</i>, 2017, 23(8):1964-1976.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[4] J.J. Zhang*, J.H. Yu, K. Zhang, X.J. Zheng，<b>J.S. Zhang</b>, Computational Aesthetic Evaluation of Logos, <i>ACM Transactions on Applied Perception</i>, 2017, 14(3): 1-21.</p>
+			<p>[4] J.J. Zhang*, J.H. Yu, K. Zhang, X.J. Zheng，J.S. Zhang, Computational Aesthetic Evaluation of Logos, <i>ACM Transactions on Applied Perception</i>, 2017, 14(3): 1-21.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[5] M.Y. Xu, J.F. Yao*, Z.H. Zhang, R. Li, B.R. Yang, C.Y. Li, J. Li, <b>J.S. Zhang</b>*, Learning EEG Topographical Representation for Classification via Convolutional Neural Network, <i>Pattern Recognition</i>, 2020, 105: 1-14.（脑与认知计算领域，SCI, IF:7.19）</p>
+			<p>[5] M.Y. Xu, J.F. Yao*, Z.H. Zhang, R. Li, B.R. Yang, C.Y. Li, J. Li, J.S. Zhang*, Learning EEG Topographical Representation for Classification via Convolutional Neural Network, <i>Pattern Recognition</i>, 2020, 105: 1-14.（脑与认知计算领域，SCI, IF:7.19）</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[6] <b>J.S. Zhang</b>*, Y. Wang, W.Y. Xiao, Z.S. Luo, Synthesizing Ornamental Typefaces, <i>Computer Graphics Forum</i>, 2017,36(1):64-75.</p>
+			<p>[6] J.S. Zhang*, Y. Wang, W.Y. Xiao, Z.S. Luo, Synthesizing Ornamental Typefaces, <i>Computer Graphics Forum</i>, 2017,36(1):64-75.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
@@ -210,7 +210,7 @@ $(document).ready(function() {
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[8] R. Li, R.L. Qin, <b>J.S. Zhang</b>*, J.J.Wu, C.L. Zhou, The Aesthetic Preference of Chinese Typefaces - An Event-Related Potential study, <i>Brain Research</i>, 2015，1598: 57-65.  (脑与认知计算领域，SCI/SSCI, IF:2.56)</p>
+			<p>[8] R. Li, R.L. Qin, J.S. Zhang*, J.J.Wu, C.L. Zhou, The Aesthetic Preference of Chinese Typefaces - An Event-Related Potential study, <i>Brain Research</i>, 2015，1598: 57-65.  (脑与认知计算领域，SCI/SSCI, IF:2.56)</p>
 	    </div>  	
        <br></br>
           	  
@@ -220,39 +220,39 @@ $(document).ready(function() {
 	<h2>国内期刊</h2>
 	<br></br>
         <div class="container_16">       
-		   <p>[1] 张艳，谢源，洪辰，曲延云*，李睿，<b>张俊松</b>，李翠华，基于多视角聚类分析的汉字字体审美偏好挖掘，CIDE&DEA 2020，推荐到中国科学：信息科学，2020.(CIDE&DEA 2020 最佳论文奖)</p>
+		   <p>[1] 张艳，谢源，洪辰，曲延云*，李睿，张俊松，李翠华，基于多视角聚类分析的汉字字体审美偏好挖掘，CIDE&DEA 2020，推荐到中国科学：信息科学，2020.(CIDE&DEA 2020 最佳论文奖)</p>
 	    </div>  	
        <br></br>
 	   <div class="container_16">       
-			<p>[2] 郑瑞凌，<b>张俊松</b>*，脑电时空多特征融合的数字图形界面认知负荷评价方法,计算机辅助设计与图形学学报，2020，32（7）:1062-1069.</p>
+			<p>[2] 郑瑞凌，张俊松*，脑电时空多特征融合的数字图形界面认知负荷评价方法,计算机辅助设计与图形学学报，2020，32（7）:1062-1069.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[3] <b>张俊松</b>*，数字书法研究综述，中国科学:信息科学, 2019，2：143-158.</p>
+			<p>[3] 张俊松*，数字书法研究综述，中国科学:信息科学, 2019，2：143-158.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[4] 黄培强，李昕，<b>张俊松</b>*，结合网格保刚性的多目的地地图布局优化方法，计算机辅助设计与图形学学报，2019，31（4）：622-628.</p>
+			<p>[4] 黄培强，李昕，张俊松*，结合网格保刚性的多目的地地图布局优化方法，计算机辅助设计与图形学学报，2019，31（4）：622-628.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[5] 杨祖义，<b>张俊松</b>*，融合主题和视觉特征的图片拼贴画合成方法,计算机辅助设计与图形学学报，2019，31（8）：1403-1409.</p>
+			<p>[5] 杨祖义，张俊松*，融合主题和视觉特征的图片拼贴画合成方法,计算机辅助设计与图形学学报，2019，31（8）：1403-1409.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[6] 戴庆辉,<b>张俊松</b>*,考虑笔画和拓扑结构的字形美化方法,中国科学:信息科学, 2017，47(4), 468-481.(China CAD&CG 2016 最佳论文奖)</p>
+			<p>[6] 戴庆辉,张俊松*,考虑笔画和拓扑结构的字形美化方法,中国科学:信息科学, 2017，47(4), 468-481.(China CAD&CG 2016 最佳论文奖)</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[7] 罗振珊，<b>张俊松</b>*，范接鹏，结合因子图的多目的地地图布局优化，中国图象图形学学报，2015, 20(3): 418-426.</p>
+			<p>[7] 罗振珊，张俊松*，范接鹏，结合因子图的多目的地地图布局优化，中国图象图形学学报，2015, 20(3): 418-426.</p>
 	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[8] 邓晓健，李彬，<b>张俊松</b>*，基于统计的汉字字形视觉重心计算方法，中文信息学报，2015，29（4）：159-165。</p>
-	    </div>  	</b>
+			<p>[8] 邓晓健，李彬，张俊松*，基于统计的汉字字形视觉重心计算方法，中文信息学报，2015，29（4）：159-165。</p>
+	    </div>  	
        <br></br>
         <div class="container_16">       
-			<p>[9] <b>张俊松</b>，张悠苗，周昌乐，书法临摹过程的交互式动画建模方法,计算机辅助设计与图形学学报，2014，26（6），963-972.</p>
+			<p>[9] 张俊松，张悠苗，周昌乐，书法临摹过程的交互式动画建模方法,计算机辅助设计与图形学学报，2014，26（6），963-972.</p>
 	    </div>  
        <br></br>
      	  
@@ -271,16 +271,16 @@ $(document).ready(function() {
 		</div>	
     <div class="gallery">
         <div class="container_16">
-		  <p>[1]融合语义和人类审美认知机理的艺术图案分析与合成，<b>国家自然基金面上项目</b>，项目批准号：61772440，起止年月: 2018年1月-2021年12月，<b>主持</b>。</p>
-		  <p>[2]基于文本和图形语义融合的甲骨文辅助考释研究，<b>教育部、国家语委甲骨文研究与应用专项</b>，项目批准号：YWZ-J010，起止年月: 2018年1月-2019年12月，<b>参与</b>。</p>
-		  <p>[3]透视型头盔双目显示界面工效研究，<b>航空科学基金</b>，项目批准号：20165168007，起止年月：2016年10月-2018年9月，<b>主持</b>。</p>
-		  <p>[4]脑机融合感知和认知的计算理论与方法(子课题)，<b>国家重点基础研究发展规划973项目</b>，项目批准号：2013CB329502，2013年1月-2017年12月，<b>参与</b>。</p>
-		  <p>[5]结合空间优化和视觉认知的书法字形建模研究，项目批准号：A1706，<b>浙江大学CAD&CG国家重点实验室开放课题</b>，起止年月：2017年1月-2017年12月，<b>主持</b>。</p>
-		  <p>[6]交互式艺术汉字造型与绘制的关键技术研究，<b>国家自然基金青年项目</b>，项目批准号：60903129，起止年月: 2010年1月-2012年12月，<b>主持</b>。</p>
-		  <p>[7]艺术风格字形合成及其视觉效果的认知评价研究, <b>北京大学数字出版技术国家重点实验室开放课题</b>,起止年月：2012年9月-2014年8月，<b>主持</b>。</p>
-		  <p>[8]抑郁症患者前注意加工的心理生理机制，<b>厦门市科技惠民项目</b>，起止年月：2013-2015.项目批准号：3502Z20134036，<b>参与</b>。</p>
-		  <p>[9]汉字字形视觉重心的计算方法，<b>CCF中文信息技术开放课题基金</b>, 项目批准号：CCF2011-01-03，起止年月: 2011年9月-2012年8月，<b>主持</b>。</p>
-		  <p>[10]引入审美觉知机制的音乐创造性计算模型及其应用实现，<b>国家自然基金项目</b>，项目批准号：60975076，起止年月: 2010年1月-2012年12月，<b>主持</b>。</p>
+		  <p>[1]融合语义和人类审美认知机理的艺术图案分析与合成，国家自然基金面上项目，项目批准号：61772440，起止年月: 2018年1月-2021年12月，主持。</p>
+		  <p>[2]基于文本和图形语义融合的甲骨文辅助考释研究，教育部、国家语委甲骨文研究与应用专项，项目批准号：YWZ-J010，起止年月: 2018年1月-2019年12月，参与。</p>
+		  <p>[3]透视型头盔双目显示界面工效研究，航空科学基金，项目批准号：20165168007，起止年月：2016年10月-2018年9月，主持。</p>
+		  <p>[4]脑机融合感知和认知的计算理论与方法(子课题)，国家重点基础研究发展规划973项目，项目批准号：2013CB329502，2013年1月-2017年12月，参与。</p>
+		  <p>[5]结合空间优化和视觉认知的书法字形建模研究，项目批准号：A1706，浙江大学CAD&CG国家重点实验室开放课题，起止年月：2017年1月-2017年12月，主持。</p>
+		  <p>[6]交互式艺术汉字造型与绘制的关键技术研究，国家自然基金青年项目，项目批准号：60903129，起止年月: 2010年1月-2012年12月，主持。</p>
+		  <p>[7]艺术风格字形合成及其视觉效果的认知评价研究, 北京大学数字出版技术国家重点实验室开放课题,起止年月：2012年9月-2014年8月，主持。</p>
+		  <p>[8]抑郁症患者前注意加工的心理生理机制，厦门市科技惠民项目，起止年月：2013-2015.项目批准号：3502Z20134036，参与。</p>
+		  <p>[9]汉字字形视觉重心的计算方法，CCF中文信息技术开放课题基金, 项目批准号：CCF2011-01-03，起止年月: 2011年9月-2012年8月，主持。</p>
+		  <p>[10]引入审美觉知机制的音乐创造性计算模型及其应用实现，国家自然基金项目，项目批准号：60975076，起止年月: 2010年1月-2012年12月，主持。</p>
 		  </div>  	
        <br></br>
 	</div><!-- end .gallery -->	
